--- a/res/layout/activity_trap_device.xml
+++ b/res/layout/activity_trap_device.xml
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/statusTextBox"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="33dp"
         android:lines="10" />
 
     <LinearLayout
