--- a/res/layout/activity_trap_device.xml
+++ b/res/layout/activity_trap_device.xml
@@ -50,4 +50,42 @@
         android:layout_marginBottom="110dp"
         android:src="@drawable/ic_launcher" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/IdentifiedImage1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="false"
+            android:scaleType="fitXY"
+            android:src="@drawable/wildlifesecurity_icon" />
+
+        <ImageView
+            android:id="@+id/IdentifiedImage2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="false"
+            android:scaleType="fitXY"
+            android:src="@drawable/wildlifesecurity_icon" />
+
+        <ImageView
+            android:id="@+id/IdentifiedImage3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="false"
+            android:scaleType="fitXY"
+            android:src="@drawable/wildlifesecurity_icon" />
+
+        <ImageView
+            android:id="@+id/IdentifiedImage4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            android:src="@drawable/wildlifesecurity_icon" />
+
+    </LinearLayout>
+
 </LinearLayout>
