big image in lanshape mode

--- a/res/menu/trap_device.xml
+++ b/res/menu/trap_device.xml
@@ -7,5 +7,15 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="Settings"/>
-
+    
+    <item
+        android:id="@+id/start"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="Start"/>
+    <item
+        android:id="@+id/stop"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="Stop"/>
 </menu>
