--- a/res/menu/trap_device.xml
+++ b/res/menu/trap_device.xml
@@ -7,7 +7,6 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="Settings"/>
-    
     <item
         android:id="@+id/start"
         android:orderInCategory="100"
@@ -18,4 +17,17 @@
         android:orderInCategory="100"
         android:showAsAction="always"
         android:title="Stop"/>
+     <item
+        android:id="@+id/swapBackground"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="Swap"/>
+     <item
+        android:id="@+id/serviceConnected"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:title="No connection"
+     	android:visible="true"
+        android:enabled="false" />
+          
 </menu>
