--- a/res/layout/activity_trap_device.xml
+++ b/res/layout/activity_trap_device.xml
@@ -15,6 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher" android:contentDescription="Image"/>
 
 </LinearLayout>
